<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:descendantFocusability="blocksDescendants"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/img_poster"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="16dp"
                android:src="@color/teal_700"
                android:contentDescription="@string/gambar_poster_film"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/title"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/txt_title"
                app:layout_constraintStart_toEndOf="@+id/img_poster"
                app:layout_constraintTop_toTopOf="@+id/txt_title" />

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/textview"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/txt_genre"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genre"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/txt_genre"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toTopOf="@+id/txt_genre" />

            <TextView
                android:id="@+id/txt_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/textview"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/txt_year"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/txt_title"
                app:layout_constraintTop_toBottomOf="@+id/txt_title" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tahun"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/txt_year"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="@+id/txt_year" />

            <TextView
                android:id="@+id/txt_year"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/textview"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/txt_duration"
                app:layout_constraintStart_toStartOf="@+id/txt_genre"
                app:layout_constraintTop_toBottomOf="@+id/txt_genre" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/durasi"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/txt_duration"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="@+id/txt_duration" />

            <TextView
                android:id="@+id/txt_duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/textview"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/txt_year"
                app:layout_constraintTop_toBottomOf="@+id/txt_year" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deskripsi"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:layout_weight="3"
                    android:text="@string/actor" />


                <TextView
                    android:id="@+id/txt_actor"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/textview"
                    app:layout_constraintEnd_toEndOf="parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:text="@string/director"
                    app:layout_constraintBottom_toTopOf="@+id/txt_description"
                    app:layout_constraintStart_toStartOf="@+id/textView11"
                    app:layout_constraintTop_toBottomOf="@+id/textView11" />

                <TextView
                    android:id="@+id/txt_director"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="6.5"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/textview" />

            </LinearLayout>

            <TextView
                android:id="@+id/txt_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/black"
                android:layout_marginBottom="16dp"
                android:text="@string/textview"
                android:textAlignment="center" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>